--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,19 +8,20 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView42"
         android:layout_width="145dp"
         android:layout_height="40dp"
         android:text="Bienvenido"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.955" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnRegistro"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginBottom="200dp"
@@ -31,12 +32,12 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLogin"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginBottom="16dp"
         android:text="Iniciar Sesión"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/btnRegistro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
@@ -45,8 +46,11 @@
         android:id="@+id/imageView2"
         android:layout_width="327dp"
         android:layout_height="316dp"
-        app:srcCompat="@drawable/supervision"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="113dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.074"
+        app:srcCompat="@drawable/supervision" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
