--- a/app/src/main/res/layout/restablecer_contrasena.xml
+++ b/app/src/main/res/layout/restablecer_contrasena.xml
@@ -17,28 +17,28 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextText8"
+        android:id="@+id/txtCorreo"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="Ingrese su correo electronico"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView19" />
+        app:layout_constraintTop_toBottomOf="@+id/lblMensaje" />
 
     <TextView
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Email"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText8"
-        app:layout_constraintStart_toStartOf="@+id/editTextText8" />
+        app:layout_constraintBottom_toTopOf="@+id/txtCorreo"
+        app:layout_constraintStart_toStartOf="@+id/txtCorreo" />
 
     <TextView
-        android:id="@+id/textView19"
+        android:id="@+id/lblMensaje"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
@@ -47,24 +47,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
+    <TextView
+        android:id="@+id/lblRespuesta"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="336dp"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        app:layout_constraintVertical_bias="0.0" />
+
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btnEnviar"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginTop="32dp"
         android:text="Enviar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText8" />
+        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />
 
     <TextView
-        android:id="@+id/textView20"
+        android:id="@+id/lblLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Volver a Inicio de Sesión"
         android:textColor="#2818FF"
         android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@+id/button6"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintStart_toStartOf="@+id/btnEnviar"
+        app:layout_constraintTop_toBottomOf="@+id/btnEnviar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
