--- a/app/src/main/res/layout/registro_exitoso_trabajador.xml
+++ b/app/src/main/res/layout/registro_exitoso_trabajador.xml
@@ -30,14 +30,17 @@
         android:id="@+id/textView21"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
         android:text="Crea tu primera propuesta y haz visible tu talento"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        tools:layout_editor_absoluteX="71dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.716" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnCrearPropuesta"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
@@ -55,7 +58,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/btnCrearPropuesta"
         app:layout_constraintVertical_bias="0.092" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
