--- a/app/src/main/res/layout/creacion_propuesta_trabajo.xml
+++ b/app/src/main/res/layout/creacion_propuesta_trabajo.xml
@@ -29,7 +29,7 @@
         app:layout_constraintVertical_bias="0.864" />
 
     <Spinner
-        android:id="@+id/spinner5"
+        android:id="@+id/spinnerTipoServicioPT"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
