--- a/app/src/main/res/layout/item_solicitud_aceptada.xml
+++ b/app/src/main/res/layout/item_solicitud_aceptada.xml
@@ -118,11 +118,12 @@
                 android:id="@+id/ratingBarServicio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:numStars="5"
-                android:stepSize="1.0"
-                android:rating="0"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="8dp" />
+                android:layout_marginBottom="8dp"
+                android:numStars="5"
+                android:progressTint="#FFCC00"
+                android:rating="0"
+                android:stepSize="1.0" />
 
             <EditText
                 android:id="@+id/etComentarioCalificacion"
