--- a/app/src/main/res/layout/listado_solicitudes_trabajador.xml
+++ b/app/src/main/res/layout/listado_solicitudes_trabajador.xml
@@ -1,40 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
     tools:context=".ListadoSolicitudesTrabajadorActivity">
 
-    <TextView
-        android:id="@+id/tvTituloSolicitudes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Solicitudes de Trabajo Recibidas"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal"
-        android:layout_marginBottom="16dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewSolicitudesTrabajador"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_solicitud_trabajador"/>
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tvNoSolicitudes"
+        <TextView
+            android:id="@+id/tvTituloSolicitudes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Solicitudes de Trabajo Recibidas"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="16dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewSolicitudesTrabajador"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_solicitud_trabajador"/>
+
+        <TextView
+            android:id="@+id/tvNoSolicitudes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No tienes solicitudes de trabajo pendientes."
+            android:textSize="16sp"
+            android:textColor="@android:color/darker_gray"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabCalificacion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No tienes solicitudes de trabajo pendientes."
-        android:textSize="16sp"
-        android:textColor="@android:color/darker_gray"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        android:layout_gravity="bottom|end"
+        android:layout_margin="24dp"
+        android:contentDescription="Agregar"
+        app:backgroundTint="#8400FF"
+        app:srcCompat="@android:drawable/btn_star_big_on"
+        app:tint="@color/purple_200" />
 
-</LinearLayout>
+</FrameLayout>
