--- a/app/src/main/res/layout/listado_solicitudes_trabajador.xml
+++ b/app/src/main/res/layout/listado_solicitudes_trabajador.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#FFFFFF"
     android:padding="16dp"
-    tools:context=".ListadoSolicitudesTrabajadorActivity">
+    tools:context=".trabajador.ListadoSolicitudesTrabajadorActivity">
 
     <TextView
         android:id="@+id/tvTituloSolicitudes"
