--- a/app/src/main/res/layout/registro_sesion.xml
+++ b/app/src/main/res/layout/registro_sesion.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <TextView
         android:id="@+id/textView"
@@ -96,7 +97,7 @@
         android:layout_marginTop="52dp"
         android:ems="10"
         android:hint="Ingrese su telefono"
-        android:inputType="text"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spnTipoUsuario" />
