--- a/app/src/main/res/layout/historial_propuestas_trabajador.xml
+++ b/app/src/main/res/layout/historial_propuestas_trabajador.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".MisPropuestasActivity"> <TextView
+    android:background="#FFFFFF">
+    <TextView
     android:id="@+id/textViewHeaderMisPropuestas"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -64,7 +64,7 @@
         android:layout_marginBottom="16dp"
         android:clickable="true"
         android:focusable="true"
-        app:srcCompat="@android:drawable/ic_menu_view" app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_input_add" app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="Ver listado de propuestas disponibles" />
 
