--- a/app/src/main/res/layout/item_calificacion.xml
+++ b/app/src/main/res/layout/item_calificacion.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardElevation="4dp"
-    app:cardCornerRadius="12dp">
+    app:cardCornerRadius="12dp"
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
