--- a/app/src/main/res/layout/listado_propuestas.xml
+++ b/app/src/main/res/layout/listado_propuestas.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListadoPropuestasActivity">
+    tools:context=".cliente.ListadoPropuestasActivity"
+    android:background="#FFFFFF">
 
     <TextView
         android:id="@+id/textViewHeader"
