--- a/app/src/main/res/layout/propuesta_detalle.xml
+++ b/app/src/main/res/layout/propuesta_detalle.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
-        tools:context=".DetallePropuestaActivity"> <TextView
+        tools:context=".cliente.DetallePropuestaActivity"> <TextView
         android:id="@+id/tvTituloPropuesta"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
